--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "guru",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "dev": "cross-env NODE_ENV=development vite",
+    "build": "cross-env NODE_ENV=production vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -11,8 +11,10 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/node": "^17.0.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.5",
     "sass": "^1.45.0",
     "tailwindcss": "^3.0.7",
